➕ Add ktlint and hilt dependencies